add manifest.json with icon for home screen (closes #525)

--- a/beszel/site/index.html
+++ b/beszel/site/index.html
@@ -2,7 +2,8 @@
 <html lang="en" dir="ltr">
 	<head>
 		<meta charset="UTF-8" />
-		<link rel="icon" type="image/svg+xml" href="/static/favicon.svg" />
+		<link rel="manifest" href="./static/manifest.json" />
+		<link rel="icon" type="image/svg+xml" href="./static/favicon.svg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Beszel</title>
 		<script>window.BASE_PATH = "%BASE_URL%"</script>
