--- a/beszel/site/index.html
+++ b/beszel/site/index.html
@@ -7,6 +7,16 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Beszel</title>
 		<script>window.BASE_PATH = "%BASE_URL%"</script>
+    <script>
+      if ("serviceWorker" in navigator) {
+        navigator.serviceWorker.register("./static/serviceWorker.js")
+          .then(function(registration) {
+            console.log("ServiceWorker registration successful with scope: ", registration.scope)
+          }).catch(function(err) {
+            console.log("ServiceWorker registration failed: ", err);
+          })
+      }
+    </script>
 	</head>
 	<body>
 		<div id="app"></div>
