--- a/beszel/site/index.html
+++ b/beszel/site/index.html
@@ -5,9 +5,9 @@
 		<link rel="manifest" href="./static/manifest.json" />
 		<link rel="icon" type="image/svg+xml" href="./static/favicon.svg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Beszel</title>
+		<title>CMonitor</title>
 		<script>
-			globalThis.BESZEL = {
+			globalThis.CMONITOR = {
 				BASE_PATH: "%BASE_URL%",
 				HUB_VERSION: "{{V}}"
 			}
