--- a/beszel/site/index.html
+++ b/beszel/site/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<link rel="manifest" href="./static/manifest.json" />
 		<link rel="icon" type="image/svg+xml" href="./static/favicon.svg" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
 		<title>Beszel</title>
 		<script>
 			globalThis.BESZEL = {
