Add CBOR and agent initiated WebSocket connections (#51, #490, #646, #845, etc)
- Add version exchange between hub and agent.
- Introduce ConnectionManager for managing WebSocket and SSH connections.
- Implement fingerprint generation and storage in agent.
- Create expiry map package to store universal tokens.
- Update config.yml configuration to include tokens.
- Enhance system management with new methods for handling system states and alerts.
- Update front-end components to support token / fingerprint management features.
- Introduce utility functions for token generation and hub URL retrieval.

Co-authored-by: nhas <jordanatararimu@gmail.com>

--- a/beszel/site/index.html
+++ b/beszel/site/index.html
@@ -9,7 +9,8 @@
 		<script>
 			globalThis.BESZEL = {
 				BASE_PATH: "%BASE_URL%",
-				HUB_VERSION: "{{V}}"
+				HUB_VERSION: "{{V}}",
+				HUB_URL: "{{HUB_URL}}"
 			}
 		</script>
 	</head>
