Revert "Merge branch 'main' into feat/collect-os"
This reverts commit 7640271cb7e76eb8d6106d1fed74aa363c57d865, reversing
changes made to e9bdf9e2159e507d30ca28c8d30f97869ad61c78.

--- a/beszel/site/index.html
+++ b/beszel/site/index.html
@@ -9,8 +9,7 @@
 		<script>
 			globalThis.BESZEL = {
 				BASE_PATH: "%BASE_URL%",
-				HUB_VERSION: "{{V}}",
-				HUB_URL: "{{HUB_URL}}"
+				HUB_VERSION: "{{V}}"
 			}
 		</script>
 	</head>
