--- a/beszel/site/index.html
+++ b/beszel/site/index.html
@@ -10,7 +10,8 @@
 			globalThis.BESZEL = {
 				BASE_PATH: "%BASE_URL%",
 				HUB_VERSION: "{{V}}",
-				HUB_URL: "{{HUB_URL}}"
+				HUB_URL: "{{HUB_URL}}",
+				SYSTEMS: '{SYSTEMS}'
 			}
 		</script>
 	</head>
